# ns-library

./: CMakeLists.txt  CMakePresets.json
cmake/: avr_gcc_toolchain.cmake  update_vcs_metadata.cmake
config/: version.h.in
config/ns/: version.hpp.in
config/ns/vcs/: metadata.hpp.in
src/: dummy.cpp
tests/: ns_version_test.cxx  version_test.cxx
